--- a/applications/portfolio/templates/body.html
+++ b/applications/portfolio/templates/body.html
@@ -1,3 +1,10 @@
 <body>
-    <h1>Hello worlds!</h1>
+    <div class="hero">
+        <button class="button small basic"></button>
+        <button class="button small primary"></button>
+        <button class="button small warning"></button>
+    </div>
+    <div class="main wrapper">
+
+    </div>
 </body>
