--- a/applications/portfolio/templates/body.html
+++ b/applications/portfolio/templates/body.html
@@ -5,6 +5,8 @@
         <button class="button small warning"></button>
     </div>
     <div class="main wrapper">
-
+        <svg height="100" width="100">
+            <use href="#loader-4" ></use>
+        </svg>
     </div>
 </body>
